--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,10 @@
 [submodule "modules/database"]
 	path = modules/database
 	url = git://github.com/kohana/database.git
+[submodule "modules/auth"]
+	path = modules/auth
+	url = git://github.com/kohana/auth.git
+[submodule "modules/orm"]
+	path = modules/orm
+	url = git://github.com/kohana/orm.git
+
