--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,9 @@
 [submodule "modules/domparse"]
 	path = modules/domparse
 	url = git://github.com/madeinnordeste/kohana-simple-html-dom.git
+
+
+
+[submodule "modules/admin"]
+	path = modules/admin
+	url = git://github.com/digibart/killeradmin.git
