--- a/html/.htaccess
+++ b/html/.htaccess
@@ -19,4 +19,4 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-l
 
 # Rewrite all other URLs to index.php/URL
-RewriteRule .* index.php/$0 [L]
+RewriteRule .* index.php/#$0 [L]
