--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@
 /files_temp
 files_temp/*
 application/config/database.php
+/cordova
+cordova/*
+build_v.0.0.1
+build_v.0.0.2
+build_v.0.0.3
+build_v.0.0.4
+build_v.0.0.5
