--- a/cordova/platforms/ios/Athletez/Athletez-Info.plist
+++ b/cordova/platforms/ios/Athletez/Athletez-Info.plist
@@ -206,6 +206,12 @@
           <string>fb219148511595084</string>
         </array>
       </dict>
+      <dict>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>fb219148511595084</string>
+        </array>
+      </dict>
     </array>
     <key>CFBundleVersion</key>
     <string>0.0.1</string>
